Enhance blog post styling and performance metrics documentation
- Updated blog post content in 1.md to improve clarity and readability, including formatting adjustments and additional explanations for performance metrics.
- Added a new CSS file (blogpost.css) to style blog posts, including layout, typography, and interactive elements for a better user experience.

--- a/microfrontends/angular-blog/src/assets/blog/posts/1.md
+++ b/microfrontends/angular-blog/src/assets/blog/posts/1.md
@@ -18,7 +18,9 @@ Esta dinámica crea lo que se puede considerar una "inversión del rendimiento".
 
 Para optimizar eficazmente, es fundamental ir más allá de la noción abstracta de "velocidad" y centrarse en métricas específicas y centradas en el usuario, como las definidas por los Core Web Vitals de Google y otras API de rendimiento. Estas métricas no son independientes; forman una cadena causal donde la optimización de una etapa a menudo es un requisito previo para mejorar la siguiente.
 
-- **First Contentful Paint (FCP):** Mide el tiempo que tarda en aparecer en pantalla el primer elemento de contenido del DOM, ya sea texto, una imagen o un elemento <canvas> no blanco.<sup>10</sup> Un FCP rápido (por debajo de 1.8 segundos) es crucial porque le asegura al usuario que la página está funcionando y cargando.<sup>12</sup> Esta métrica está directamente influenciada por el TTFB y los recursos que bloquean el renderizado, como los scripts de JavaScript y las hojas de estilo CSS.<sup>14</sup>
+- **First Contentful Paint (FCP):** Mide el tiempo que tarda en aparecer en pantalla el primer elemento de contenido del DOM, ya sea texto, una imagen o un elemento <canvas> no blanco.<sup>10</sup> Un FCP rápido (por debajo de 1.8 segundos) es crucial porque le asegura al usuario que la página está funcionando y cargando.<sup>12</sup> Esta métrica está directamente influenciada por el TTFB y los recursos que bloquean el renderizado, como los scripts de JavaScript y las hojas de estilo CSS.<sup>14</sup>\\
+<br/>
+
 - **Largest Contentful Paint (LCP):** Mide el tiempo que tarda en renderizarse el elemento de contenido más grande visible en el viewport. Es un Core Web Vital y un factor de clasificación en los motores de búsqueda.<sup>15</sup> Un LCP ideal se sitúa por debajo de los 2.5 segundos. Dado que el LCP no puede ocurrir antes que el FCP, la optimización del FCP a menudo conduce a una mejora directa del LCP.<sup>12</sup>
 - **Interaction to Next Paint (INP):** Este Core Web Vital mide la capacidad de respuesta de la página a las interacciones del usuario, como clics o pulsaciones de teclas. Un INP bajo (menos de 200 milisegundos) indica una experiencia fluida y sin bloqueos.<sup>15</sup> En las SPA, el INP se ve directamente afectado por las tareas de JavaScript de larga duración en el hilo principal, que pueden impedir que el navegador responda a las entradas del usuario.
 - **Time to Interactive (TTI):** Marca el punto en el que la página no solo está visualmente renderizada, sino que también es capaz de responder de manera fiable a la interacción del usuario. En una SPA, puede haber un retraso significativo entre el LCP y el TTI, ya que el hilo principal puede seguir ocupado ejecutando el paquete principal de JavaScript, incluso después de que el contenido principal se haya pintado en la pantalla.<sup>12</sup>
@@ -26,93 +28,114 @@ Para optimizar eficazmente, es fundamental ir más allá de la noción abstracta
 La interdependencia de estas métricas es clave. Un TTFB alto garantiza un FCP lento, que a su vez garantiza un LCP lento. Un paquete de JavaScript grande y sin optimizar, aunque se cargue rápidamente, bloqueará el hilo principal, retrasando el TTI y degradando el INP. Por lo tanto, una estrategia de optimización eficaz debe abordar toda la cadena, desde la respuesta del servidor hasta la ejecución eficiente en tiempo de ejecución.
 
 ### **Un Marco para la Optimización**
+<br/>
 
 Este informe se estructura en torno a cuatro pilares de optimización que abordan colectivamente los desafíos de rendimiento de las SPA en sus diferentes fases:
 
-1. **Code Splitting y Lazy Loading:** Atacan directamente el tiempo de carga inicial (FCP, LCP, TTI) al reducir drásticamente el tamaño del paquete de JavaScript inicial.
-1. **Memoization:** Se enfoca en el rendimiento en tiempo de ejecución y la capacidad de respuesta (INP) al evitar recálculos y re-renderizados innecesarios que pueden bloquear el hilo principal.
-1. **Virtual Scrolling:** Es una optimización especializada en tiempo de ejecución para un cuello de botella común y severo: el renderizado de grandes listas de datos, que afecta tanto a la memoria como a la capacidad de respuesta (INP).
+1. **Code Splitting y Lazy Loading:** Atacan directamente el tiempo de carga inicial (FCP, LCP, TTI) al reducir drásticamente el tamaño del paquete de JavaScript inicial.\\
+1. **Memoization:** Se enfoca en el rendimiento en tiempo de ejecución y la capacidad de respuesta (INP) al evitar recálculos y re-renderizados innecesarios que pueden bloquear el hilo principal.\\
+1. **Virtual Scrolling:** Es una optimización especializada en tiempo de ejecución para un cuello de botella común y severo: el renderizado de grandes listas de datos, que afecta tanto a la memoria como a la capacidad de respuesta (INP).\\
 
 Estas técnicas, aplicadas de forma estratégica, permiten a los desarrolladores construir SPA que no solo son ricas en funcionalidades, sino también excepcionalmente rápidas y receptivas.
+<br/>
 
-## **II. Deconstruyendo el Monolito: Code Splitting Estratégico y Lazy Loading**
 
-La optimización más impactante para el tiempo de carga de una SPA es la deconstrucción de su paquete monolítico de JavaScript. Este proceso se basa en dos conceptos interrelacionados: el **Code Splitting** (división de código) es la estrategia de dividir el código en fragmentos más pequeños, mientras que el **Lazy Loading** (carga perezosa) es la táctica de cargar esos fragmentos solo cuando son necesarios.<sup>7</sup>
+## **II. Deconstruyendo el Monolito: Code Splitting Estratégico y Lazy Loading**\\
 
-### **Principios Fundamentales del Code Splitting**
+La optimización más impactante para el tiempo de carga de una SPA es la deconstrucción de su paquete monolítico de JavaScript. Este proceso se basa en dos conceptos interrelacionados: el **Code Splitting** (división de código) es la estrategia de dividir el código en fragmentos más pequeños, mientras que el **Lazy Loading** (carga perezosa) es la táctica de cargar esos fragmentos solo cuando son necesarios.<sup>7</sup>\\
 
-El objetivo principal del code splitting es transformar un único y masivo archivo bundle.js en múltiples archivos más pequeños e independientes, conocidos como "chunks".<sup>18</sup> Esta es una funcionalidad principal de los empaquetadores (bundlers) modernos como Webpack y Vite (que utiliza Rollup internamente).<sup>19</sup> Estas herramientas analizan el grafo de dependencias de la aplicación y generan los chunks automáticamente en función de señales específicas en el código fuente.
+### **Principios Fundamentales del Code Splitting**\\
+<br/>
 
-La señal más importante es la sintaxis de importación dinámica import(). Esta es una característica del estándar ECMAScript que devuelve una promesa.<sup>22</sup> Cuando un empaquetador encuentra una llamada como import('./module.js'), entiende que './module.js' y todas sus dependencias deben ser empaquetadas en un chunk separado, que se cargará de forma asíncrona a través de una petición de red cuando se ejecute esa línea de código.<sup>22</sup>
+El objetivo principal del code splitting es transformar un único y masivo archivo bundle.js en múltiples archivos más pequeños e independientes, conocidos como "chunks".<sup>18</sup> Esta es una funcionalidad principal de los empaquetadores (bundlers) modernos como Webpack y Vite (que utiliza Rollup internamente).<sup>19</sup> Estas herramientas analizan el grafo de dependencias de la aplicación y generan los chunks automáticamente en función de señales específicas en el código fuente.\\
 
-Existen varias estrategias clave para aplicar el code splitting:
+La señal más importante es la sintaxis de importación dinámica import(). Esta es una característica del estándar ECMAScript que devuelve una promesa.<sup>22</sup> Cuando un empaquetador encuentra una llamada como import('./module.js'), entiende que './module.js' y todas sus dependencias deben ser empaquetadas en un chunk separado, que se cargará de forma asíncrona a través de una petición de red cuando se ejecute esa línea de código.<sup>22</sup>\\
+
+Existen varias estrategias clave para aplicar el code splitting:\\
 
 - **Por Puntos de Entrada (Entry Points):** Es el método más simple, donde se definen manualmente múltiples puntos de entrada en la configuración del empaquetador. Cada punto de entrada genera su propio bundle. Es útil para aplicaciones que son funcionalmente distintas, como un panel de administración y un sitio público, pero es menos flexible para una única SPA cohesiva.<sup>20</sup>
 - **Por Dependencias de Terceros (Vendor Chunking):** Consiste en agrupar todas las librerías de terceros (por ejemplo, react, lodash, moment) en un chunk separado, comúnmente llamado vendors.js. La lógica detrás de esto es que el código de las dependencias cambia con mucha menos frecuencia que el código de la aplicación. Al separarlo, los usuarios pueden cachear este chunk durante más tiempo, mejorando los tiempos de carga en visitas posteriores.<sup>24</sup> Los empaquetadores modernos a menudo realizan esta optimización de forma automática.
-- **Por Rutas (Route-Based Splitting):** Esta es la estrategia más común y efectiva para las SPA. Cada ruta principal de la aplicación (por ejemplo, /home, /profile, /settings) se empaqueta en su propio chunk. De esta manera, cuando un usuario visita la aplicación por primera vez, solo descarga el código necesario para la ruta inicial. El código de las otras rutas se carga bajo demanda a medida que el usuario navega por la aplicación.<sup>18</sup>
+- **Por Rutas (Route-Based Splitting):** Esta es la estrategia más común y efectiva para las SPA. Cada ruta principal de la aplicación (por ejemplo, /home, /profile, /settings) se empaqueta en su propio chunk. De esta manera, cuando un usuario visita la aplicación por primera vez, solo descarga el código necesario para la ruta inicial. El código de las otras rutas se carga bajo demanda a medida que el usuario navega por la aplicación.<sup>18</sup>\\
+
+
 
 ### **Lazy Loading en la Práctica**
 
 La implementación del lazy loading varía ligeramente entre los frameworks, pero el principio subyacente de usar import() dinámico es universal.
 
+
+
+
 #### **Lazy Loading Basado en Rutas**
 
-- **React:** Se implementa utilizando la función React.lazy en combinación con un enrutador como React Router. El componente asociado a una ruta se envuelve en React.lazy, que recibe una función que devuelve la llamada a import(). Luego, la ruta que utiliza este componente debe estar envuelta en un componente <Suspense>, que permite mostrar una interfaz de respaldo (como un spinner de carga) mientras se descarga el chunk del componente.<sup>26</sup>
+- **React:** Se implementa utilizando la función React.lazy en combinación con un enrutador como React Router. El componente asociado a una ruta se envuelve en React.lazy, que recibe una función que devuelve la llamada a import(). Luego, la ruta que utiliza este componente debe estar envuelta en un componente <Suspense>, que permite mostrar una interfaz de respaldo (como un spinner de carga) mientras se descarga el chunk del componente.<sup>26</sup>\\
 
-----
+
+
 ```JavaScript
-  import React, { Suspense, lazy } from 'react';\
-  import { BrowserRouter as Router, Routes, Route } from 'react-router-dom';\
+  import React, { Suspense, lazy } from 'react';
+  import { BrowserRouter as Router, Routes, Route } from 'react-router-dom';
 
 
-  // Importación estática para el componente principal\
-  import Home from './pages/Home';\
+  // Importación estática para el componente principal
+  import Home from './pages/Home';
 
-  // Importación dinámica para la ruta 'About'\
-  const About = lazy(() => import('./pages/About'));\
+  // Importación dinámica para la ruta 'About'
+  const About = lazy(() => import('./pages/About'));
 
   const App = () => (
   <Router>
-    <Suspense fallback={<div>Loading...</div>}>\
+    <Suspense fallback={<div>Loading...</div>}>
     <Routes>
-      <Route path="/" element={<Home />} />\
-      <Route path="/about" element={<About />} />\
+      <Route path="/" element={<Home />} />
+      <Route path="/about" element={<About />} />
     </Routes>
     </Suspense>
   </Router>
   );
 ```
   
-- **Vue:** Se integra directamente en la configuración de Vue Router. En lugar de importar estáticamente un componente, se proporciona una función que devuelve una llamada a import(). Vue Router gestiona automáticamente la carga asíncrona y el estado de carga.<sup>29</sup>\
-  JavaScript\
-  import { createRouter, createWebHistory } from 'vue-router';\
-  import Home from '../views/Home.vue';\
-\
-  const routes = [\
-  `  `{\
-  `    `path: '/',\
-  `    `name: 'Home',\
-  `    `component: Home // Carga inmediata\
-  `  `},\
-  `  `{\
-  `    `path: '/about',\
-  `    `name: 'About',\
-  `    `// Carga perezosa (lazy-load) para la ruta 'about'\
-  `    `component: () => import(/\* webpackChunkName: "about" \*/ '../views/About.vue')\
-  `  `}\
-  ];\
-\
-  const router = createRouter({\
-  `  `history: createWebHistory(),\
-  `  `routes\
-  });\
-\
+- **Vue:** Se integra directamente en la configuración de Vue Router. En lugar de importar estáticamente un componente, se proporciona una función que devuelve una llamada a import(). Vue Router gestiona automáticamente la carga asíncrona y el estado de carga.<sup>29</sup>
+
+
+
+
+  ```JavaScript
+  import { createRouter, createWebHistory } from 'vue-router';
+  import Home from '../views/Home.vue';
+
+  const routes = [
+      {
+      path: '/',
+      name: 'Home',
+      component: Home // Carga inmediata
+    },
+    {
+      path: '/about',
+      name: 'About',
+      // Carga perezosa (lazy-load) para la ruta 'about'
+      component: () => import(/* webpackChunkName: "about" */ '../views/About.vue')
+    }
+  ];
+
+  const router = createRouter({
+     history: createWebHistory(),
+     routes
+  });
+
   export default router;
-- **Angular:** Se logra a través de la propiedad loadChildren en la configuración de rutas. Esta propiedad acepta una función que utiliza import() para cargar de forma perezosa un NgModule completo o un conjunto de rutas standalone. El enrutador de Angular se encarga de descargar y compilar el módulo solo cuando el usuario navega a una de sus rutas.<sup>32</sup>\
-  TypeScript\
-  import { Routes } from '@angular/router';\
-\
+  ```
+
+
+- **Angular:** Se logra a través de la propiedad loadChildren en la configuración de rutas. Esta propiedad acepta una función que utiliza import() para cargar de forma perezosa un NgModule completo o un conjunto de rutas standalone. El enrutador de Angular se encarga de descargar y compilar el módulo solo cuando el usuario navega a una de sus rutas.<sup>32</sup>
+  
+  
+  ```TypeScript
+  import { Routes } from '@angular/router';
+
   export const routes: Routes =;
+
+  ```
 
 #### **Lazy Loading Basado en Componentes**
 
@@ -125,7 +148,7 @@ Esta técnica se aplica a componentes que no están directamente ligados a una r
 
 Si bien el lazy loading mejora drásticamente la carga inicial, puede introducir una pequeña latencia en la navegación mientras se descarga el nuevo chunk. Para mitigar esto, se pueden utilizar las "sugerencias de recursos" (resource hints).
 
-- **Prefetching:** Le indica al navegador que descargue un recurso en segundo plano durante su tiempo de inactividad, ya que es probable que se necesite en una navegación futura. Por ejemplo, se pueden pre-cargar los chunks de las rutas visibles en los enlaces de la página actual. Webpack permite esto a través de "comentarios mágicos": import(/\* webpackPrefetch: true \*/ './module.js').<sup>22</sup>
+- **Prefetching:** Le indica al navegador que descargue un recurso en segundo plano durante su tiempo de inactividad, ya que es probable que se necesite en una navegación futura. Por ejemplo, se pueden pre-cargar los chunks de las rutas visibles en los enlaces de la página actual. Webpack permite esto a través de "comentarios mágicos": import(/* webpackPrefetch: true */ './module.js').<sup>22</sup>
 - **Preloading:** Es una sugerencia de mayor prioridad que indica que un recurso es necesario para la navegación *actual* y debe ser descargado en paralelo. Es menos común para el code splitting de rutas, pero útil para recursos críticos.
 
 Es importante entender que el code splitting implica un compromiso en la experiencia del usuario. Se está cambiando una carga inicial lenta por cargas intermitentes y más pequeñas durante la navegación. La estrategia no es "dividirlo todo", sino dividir de manera inteligente, siguiendo los límites lógicos del viaje del usuario. Dividir el código en chunks excesivamente pequeños puede ser contraproducente, ya que genera demasiadas peticiones HTTP y reduce la eficiencia de la compresión, lo que podría ralentizar la navegación en lugar de acelerarla.<sup>18</sup> La decisión de dividir un módulo debe sopesar el costo de la petición de red adicional frente al beneficio de reducir el paquete inicial.
@@ -211,11 +234,16 @@ Es fundamental comprender que el virtual scrolling es una ilusión.<sup>57</sup>
 
 El ecosistema de librerías de virtualización también ha madurado. Las primeras librerías como react-virtualized eran muy completas pero también grandes. La tendencia actual, ejemplificada por react-window y soluciones basadas en hooks como @vueuse/useVirtualList, es hacia librerías "headless" más pequeñas y enfocadas, que proporcionan la lógica de virtualización principal pero dejan la interfaz de usuario y el estilo completamente en manos del desarrollador, ofreciendo mayor control y un menor impacto en el tamaño del paquete.<sup>2</sup>
 
+<br/>
+
 ## **V. Sintetizando una Estrategia de Rendimiento Holística**
 
 Las técnicas discutidas —code splitting, lazy loading, memoización y virtual scrolling— no son soluciones aisladas, sino componentes de una arquitectura cohesiva orientada al rendimiento. La clave para construir aplicaciones rápidas y eficientes no reside en aplicar ciegamente estas optimizaciones, sino en integrarlas de manera estratégica y, fundamentalmente, en adoptar una cultura de medición continua.
 
+<br/>
+
 ### **Integrando las Técnicas: Un Caso de Estudio**
+
 
 Consideremos una aplicación de panel de control (dashboard) compleja como ejemplo para ver cómo estas técnicas trabajan en conjunto:
 
@@ -226,18 +254,27 @@ Consideremos una aplicación de panel de control (dashboard) compleja como ejemp
 
 Este enfoque por capas asegura que el usuario reciba la mejor experiencia posible en cada etapa de su interacción: una carga inicial rápida, una navegación receptiva y un manejo eficiente de grandes volúmenes de datos.
 
+<br/>
+
 ### **La Importancia de la Medición**
 
 La optimización sin medición es simplemente una conjetura. Es imperativo establecer una línea base de rendimiento antes de implementar cualquier cambio y medir el impacto de cada optimización. El flujo de trabajo moderno de desarrollo frontend es un ciclo continuo de "Construir, Medir, Optimizar".
+<br/>
 
-- **Herramientas para el Tiempo de Carga:**
+**Herramientas para el Tiempo de Carga:**
+  
   - **Lighthouse y PageSpeed Insights:** Proporcionan auditorías automatizadas de métricas clave como FCP, LCP y TTI, junto con recomendaciones de alto nivel para la mejora.<sup>11</sup> Son excelentes para obtener una visión general y establecer una línea base.
   - **Webpack Bundle Analyzer:** Una herramienta visual indispensable que muestra el contenido de los paquetes de JavaScript. Permite identificar dependencias de gran tamaño, código duplicado y oportunidades para el code splitting.<sup>6</sup>
-- **Herramientas para el Tiempo de Ejecución:**
+<br/>
+
+
+**Herramientas para el Tiempo de Ejecución:**
   - **DevTools de Frameworks (React Profiler, Vue Devtools):** Esenciales para identificar qué componentes se están re-renderizando innecesariamente y cuánto tiempo consumen. Son la guía principal para decidir dónde aplicar la memoización de manera efectiva.
   - **Pestaña "Performance" de las Chrome DevTools:** Ofrece un análisis profundo de la actividad del hilo principal, ayudando a identificar tareas de larga duración, cuellos de botella en el scripting y problemas de layout que afectan la capacidad de respuesta.
 
 La disponibilidad de estas herramientas sofisticadas ha transformado la optimización del rendimiento de un "arte oscuro" a una disciplina de ingeniería basada en datos. La responsabilidad de un desarrollador ya no termina con la entrega de una funcionalidad; se extiende a la verificación y validación de su impacto en el rendimiento.
+
+<br/>
 
 ### **Recomendaciones Finales**
 
@@ -290,26 +327,3 @@ Al adoptar un enfoque holístico que combina una arquitectura inteligente con un
 1. How to optimize large projects with dynamic imports and code splitting in ViteJS? #17730, acceso: octubre 13, 2025, <https://github.com/vitejs/vite/discussions/17730>
 1. www.fronteando.dev, acceso: octubre 13, 2025, <https://www.fronteando.dev/patrones-de-rendimiento-en-react-memoizacion-virtualizacion-y-lazy-loading/#:~:text=La%20memoizaci%C3%B3n%20es%20una%20t%C3%A9cnica,cuando%20sus%20props%20no%20cambian.>
 1. OPTIMIZA tu Programación en FRONTEND con MEMOIZATION | JAVASCRIPT ↗️, acceso: octubre 13, 2025, <https://www.youtube.com/watch?v=aSKauWDmcJo>
-1. Understanding Memoization in JavaScript the Easy Way | by rizan - Medium, acceso: octubre 13, 2025, <https://medium.com/@qrizan/understanding-memoization-in-javascript-the-easy-way-f62cab70fee2>
-1. Uso de memoization para mejorar el rendimiento - Construyendo a Chispas, acceso: octubre 13, 2025, <https://construyendoachispas.blog/2020/11/24/uso-de-memoization-para-mejorar-el-rendimiento/>
-1. Memoization - YouTube, acceso: octubre 13, 2025, <https://www.youtube.com/watch?v=D_V7-K-BPXo>
-1. useMemo or useCallback which should I use? : r/reactjs - Reddit, acceso: octubre 13, 2025, <https://www.reddit.com/r/reactjs/comments/1amtuv3/usememo_or_usecallback_which_should_i_use/>
-1. What the heck is memo, useMemo and useCallback in REACT? | by Muhammad Umais Hassan | Medium, acceso: octubre 13, 2025, <https://medium.com/@umaishassan/what-the-heck-is-memo-usememo-and-usecallback-in-react-3b1dc12665ad>
-1. useMemo - React, acceso: octubre 13, 2025, <https://react.dev/reference/react/useMemo>
-1. useCallback - React, acceso: octubre 13, 2025, <https://react.dev/reference/react/useCallback>
-1. What's the difference between useCallback and useMemo in practice? - Stack Overflow, acceso: octubre 13, 2025, <https://stackoverflow.com/questions/54963248/whats-the-difference-between-usecallback-and-usememo-in-practice>
-1. Computed Properties and Watchers - Vue 2, acceso: octubre 13, 2025, <https://v2.vuejs.org/v2/guide/computed.html>
-1. Computed Properties - Vue.js, acceso: octubre 13, 2025, <https://vuejs.org/guide/essentials/computed>
-1. What Is Angular Change Detection & Change Detection Strategies - Infragistics, acceso: octubre 13, 2025, <https://www.infragistics.com/blogs/angular-change-detection/>
-1. ChangeDetectorRef - Angular, acceso: octubre 13, 2025, <https://angular.dev/api/core/ChangeDetectorRef>
-1. ChangeDetectionStrategy - Angular, acceso: octubre 13, 2025, <https://angular.dev/api/core/ChangeDetectionStrategy>
-1. Virtual scrolling: Core principles and basic implementation in React - LogRocket Blog, acceso: octubre 13, 2025, <https://blog.logrocket.com/virtual-scrolling-core-principles-and-basic-implementation-in-react/>
-1. Build your Own Virtual Scroll - Part I - DEV Community, acceso: octubre 13, 2025, <https://dev.to/adamklein/build-your-own-virtual-scroll-part-i-11ib>
-1. React Grid - Virtual Scrolling | DevExtreme Reactive - GitHub Pages, acceso: octubre 13, 2025, <https://devexpress.github.io/devextreme-reactive/react/grid/docs/guides/virtual-scrolling/>
-1. wellyshen/react-cool-virtual: ♻️ A tiny React hook for rendering large datasets like a breeze. - GitHub, acceso: octubre 13, 2025, <https://github.com/wellyshen/react-cool-virtual>
-1. useVirtualList | VueUse, acceso: octubre 13, 2025, <https://vueuse.org/core/usevirtuallist/>
-1. Virtual Scroller - Vue UI Components - CoreUI, acceso: octubre 13, 2025, <https://coreui.io/vue/docs/components/virtual-scroller.html>
-1. Vue Virtual Scroller Component - PrimeVue, acceso: octubre 13, 2025, <https://primevue.org/virtualscroller/>
-1. Virtual Scrolling - Kendo UI for Angular - Telerik.com, acceso: octubre 13, 2025, <https://www.telerik.com/kendo-angular-ui/components/grid/scroll-modes/virtual>
-1. Local Virtual Scrolling - Angular Data Grid - DevExtreme - DevExpress, acceso: octubre 13, 2025, <https://js.devexpress.com/Angular/Demos/WidgetsGallery/Demo/DataGrid/VirtualScrolling/>
-1. Blazor Grid Virtual Scrolling - Telerik.com, acceso: octubre 13, 2025, <https://www.telerik.com/blazor-ui/documentation/components/grid/virtual-scrolling>
